--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.1.16",
+    "pinia": "^3.0.3",
     "vue": "^3.5.22"
   },
   "devDependencies": {
