feat: add vue-router integration and create theme page with routing setup

--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@headlessui/vue": "^1.7.23",
     "@tailwindcss/vite": "^4.1.16",
     "pinia": "^3.0.3",
-    "vue": "^3.5.22"
+    "vue": "^3.5.22",
+    "vue-router": "^4.6.3"
   },
   "devDependencies": {
     "@types/node": "^24.6.0",
