--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "scripts": {
     "dev": "vite",
     "build": "vue-tsc -b && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
@@ -16,12 +18,17 @@
     "vue-router": "^4.6.3"
   },
   "devDependencies": {
+    "@eslint/js": "^9.38.0",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
     "@vue/tsconfig": "^0.8.1",
+    "eslint": "^9.38.0",
+    "eslint-plugin-vue": "^10.5.1",
     "tailwindcss": "^4.0.0",
     "typescript": "~5.9.3",
+    "typescript-eslint": "^8.46.2",
     "vite": "npm:rolldown-vite@7.1.14",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.0"
   },
   "overrides": {
