--- a/package.json
+++ b/package.json
@@ -8,7 +8,10 @@
     "build": "vue-tsc -b && vite build",
     "preview": "vite preview",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix"
+    "lint:fix": "eslint . --fix",
+    "test": "vitest",
+    "test:ui": "vitest --ui",
+    "test:run": "vitest run"
   },
   "dependencies": {
     "@headlessui/vue": "^1.7.23",
@@ -21,13 +24,18 @@
     "@eslint/js": "^9.38.0",
     "@types/node": "^24.6.0",
     "@vitejs/plugin-vue": "^6.0.1",
+    "@vitest/ui": "^4.0.4",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.8.1",
     "eslint": "^9.38.0",
     "eslint-plugin-vue": "^10.5.1",
+    "happy-dom": "^20.0.8",
+    "jsdom": "^27.0.1",
     "tailwindcss": "^4.0.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.2",
     "vite": "npm:rolldown-vite@7.1.14",
+    "vitest": "^4.0.4",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.1.0"
   },
