--- a/.gitignore
+++ b/.gitignore
@@ -15,6 +15,12 @@ dist-ssr
 # Coverage
 coverage
 
+# Playwright
+/test-results/
+/playwright-report/
+/blob-report/
+/playwright/.cache/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
